chore: Update deployment configuration and add deployment guide
- Fix vite.config.ts base path for GitHub Pages
- Update GitHub Actions workflow
- Add comprehensive deployment documentation

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
         run: npm run build
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY || 'dummy_key_for_build' }}
+          GITHUB_PAGES: 'true'
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
